[package]
name = "ccache-tui"
version = "0.1.3"
edition = "2024"
license-file = "LICENSE"
description = "Live terminal dashboard for ccache statistics with trends and summaries."
readme = "README.md"
repository = "https://github.com/SharkyRawr/ccache-tui"
authors = ["SharkyRawr", "OpenAI Codex"]
keywords = ["ccache", "tui", "ratatui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "^0.30"
clap = { version = "^4.6", features = ["derive"] }
