[package]
name = "ccache-tui"
version = "0.1.1"
edition = "2024"
license = "CC-BY-NC-SA-4.0"
description = "Live terminal dashboard for ccache statistics with trends and summaries."
readme = "README.md"
repository = "https://github.com/SharkyRawr/ccache-tui"
authors = ["SharkyRawr", "OpenAI Codex"]
keywords = ["ccache", "tui", "ratatui", "terminal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30.0"
clap = { version = "4.5.57", features = ["derive"] }
